# quickcap

./: .gitignore  Cargo.toml  README.cn.md  README.en.md  README.md  README.zh.md  build.rs  build.sh  index.html  package.json  pnpm-lock.yaml  run.js  test.js  todo  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: README.md  release.yml
examples/: t_rayon_simd.rs  t_wgpu.rs
screen/: vite.config.ts
screen/src/draw/: editCanvas.ts  editType.ts  mosaic.ts
screen/src/utils/: index.ts  utils.ts
src/: lib.rs  main.rs
src/app/: app.rs  bg_surface.rs  config.rs  demo.html  event.rs  index.html  macos.rs  mod.rs  preload.js  shader.wgsl  user_event.rs  window.rs
src/app/capscreen/: error.rs  frame.rs  macos.rs  mod.rs  windows.rs  windows_.bak
src/app/capscreen/enumerate/: macos.rs  mod.rs  structs.rs  windows.rs
src/app/web/: index.html
src/cap/: error.rs  macos.rs  mod.rs  result.rs
src/capscreen/: error.rs  macos.rs  mod.rs  windows.rs  windows_.bak
src/capscreen/enumerate/: macos.rs  mod.rs  windows.rs
src/screen/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/screen/src/: const.ts  draw.ts  main.ts  style.css  types.d.ts  utils.ts
src/screen/src/draw/: drawScreen.ts  editCanvas.ts  editTools.ts  editType.ts  func.ts  index.ts  mosaic.ts  sizeDisplay.ts
src/screen/src/utils/: canvas.ts  device.ts  index.ts  mouseEvent.ts  utils.ts
src/stdio/: client.rs  json_rpc.rs  mod.rs
web/: const.ts  index.html  main.ts  style.css
web/draw/: drawScreen.ts  editCanvas.ts  editTools.ts  resizeAssist.ts  sizeDisplay.ts
web/utils/: canvas.ts  mouseEvent.ts
