[package]
name = "quickcap"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.34.5"
wry = { version = "0.53.5", features = ["transparent"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
wgpu = "27.0.1"
pollster = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
clipboard-rs = "0.3.1"
rfd="0.16.0"
dirs = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows 捕获库，也支持DXGI复制
windows-capture = "2.0.0-alpha.7"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 捕获库
capscreen_macos = { version = "0.1.1", features = ["macos_26_0"] }
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"

[dev-dependencies]
image = "0.25"
